# MineVerse

./: .gitignore  .npmignore  BASELINE_NOTES.md  LEGAL.md  NPM_MANUAL_FALLBACK.md  README.md  config.py  package-lock.json  package.json  start_bot.py  train.py  tsconfig.json
data/: README.md
python-backend/: pyproject.toml  requirements.txt  train_gui.py
python-backend/mineforgeai/: bootstrap.py  config.py  hardware.py  logging_utils.py  main.py  paths.py
python-backend/mineforgeai/agent/: memory.py  natural_language_router.py  patching.py  retrieval.py  shell.py  tools.py  workspace.py
python-backend/mineforgeai/chat/: clarification.py  compactor.py  context_manager.py  directives.py  prompts.py  session.py  summaries.py
python-backend/mineforgeai/cli/: input_router.py  interactive.py  permission_menu.py  renderer.py  tui.py
python-backend/mineforgeai/data/: clean.py  datasets.py  ingest.py  redaction.py
python-backend/mineforgeai/minecraft/: generators.py  java_runtime.py  platform_registry.py  validators.py  version_registry.py
python-backend/mineforgeai/minecraft_intel/: asset_analyzer.py  block_analyzer.py  bytecode_indexer.py  datapack_analyzer.py  decompiler.py  entity_analyzer.py  item_analyzer.py  jar_downloader.py  jar_indexer.py  jar_locator.py  mapping_manager.py  recipe_analyzer.py  registry_extractor.py  report_generator.py  resourcepack_analyzer.py  version_manifest.py  zip_indexer.py
python-backend/mineforgeai_omniverse_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python-backend/scripts/: publish_pypi.py
(+1881 files in other folders)
